tests/ui/consts/miri_unleashed/const_refers_to_static_cross_crate.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_refers_to_static_cross_crate.rs:28:15
   |
LL |         match static_cross_crate::OPT_ZERO {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constant accesses mutable global memory

error: constant SLICE_MUT cannot be used as pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:39:9
   |
LL |         SLICE_MUT => true,
   |         ^^^^^^^^^
   |
   = note: constants that reference mutable or external memory cannot be used as pattern

error: constant U8_MUT cannot be used as pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:46:9
   |
LL |         U8_MUT => true,
   |         ^^^^^^
   |
   = note: constants that reference mutable or external memory cannot be used as pattern

error: constant U8_MUT2 cannot be used as pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:55:9
   |
LL |         U8_MUT2 => true,
   |         ^^^^^^^
   |
   = note: constants that reference mutable or external memory cannot be used as pattern

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0080`.
